运行jvm参数的配置